# sgimacog-web

./: .gitignore  CHANGELOG.md  OFFLINE_SERVER_PLAN.md  README.md  design_prototype.html
.github/workflows/: deploy.yml
.wrangler/cache/: cf.json  pages.json  wrangler-account.json
.wrangler/tmp/bundle-DsCgKP/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-CmMwVG/: functionsWorker-0.26485790724765756.js  functionsWorker-0.26485790724765756.js.map
crate/: Cargo.toml
crate/src/: capability.rs  cobs_frame.rs  commands.rs  eeg_analysis.rs  impedance.rs  impedance_monitor.rs  lib.rs  protocol.rs  types.rs  wasm_api.rs
docs/: algorithm_report.md  user_manual.md
docs/superpowers/plans/: 2026-04-27-camera-recording-sgimacog.md  2026-05-01-eeg-hardware-event-marker.md
docs/superpowers/specs/: 2026-04-27-camera-recording-design.md  2026-05-01-eeg-hardware-event-marker-design.md
functions/: _middleware.js
functions/api/: font.js
scripts/: encrypt-wasm.mjs
web/: index.html  package.json  test_parse_full.js  test_parse_locally.ts  test_pdf_crash.ts  test_wasm_locally.js  test_wasm_locally.ts  tsconfig.app.json  vite.config.ts
web/functions/: _middleware.js
web/functions/api/: font.js
web/functions/functions/: _middleware.js
web/src/: App.css  App.tsx  i18n.ts
web/src/components/: DevicePanel.tsx
web/src/hooks/: useCameraSession.ts  useDevice.ts  useEegStream.ts  useQualityMonitor.ts
web/src/pkg/: README.md  package.json  steeg_wasm.d.ts  steeg_wasm.js  steeg_wasm_bg.wasm  steeg_wasm_bg.wasm.d.ts
(+178 files in other folders)
