[package]
name = "steeg-wasm"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
cobs = { version = "0.5", default-features = false, features = ["alloc"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
debug = false
strip = "debuginfo"
panic = "abort"
codegen-units = 1
